--- a/Snapshot/Snapshot.csproj
+++ b/Snapshot/Snapshot.csproj
@@ -13,7 +13,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,6 +49,8 @@
     <Compile Include="ContextProvider.cs" />
     <Compile Include="IView.cs" />
     <Compile Include="Presenter.cs" />
+    <Compile Include="ProcessInfo.cs" />
+    <Compile Include="ToolHelp32.cs" />
     <Compile Include="View.cs">
       <SubType>Form</SubType>
     </Compile>
